--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  overflow: hidden;
+  color: #bbb;
+  font-family: cursive;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.body {
+  height: 100vh;
+  background-image: url(./resources/bgLg.svg);
+  background-size: cover;
+  background-position: center;
+  padding: 3rem 5rem;
+}
+
+.h1 {
+  font-size: 3.5rem;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 1rem 3rem;
+}
+
+.count {
+  font-size: 12.5rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #eee
+}
+
+.btnCont {
+  display: flex;
+  justify-content: space-evenly;
+  position: fixed;
+  bottom: 5rem;
+  width: 100%;
+  margin-left: -5rem;
+}
+
+.btn {
+  padding: 1rem 3rem;
+  border-radius: 2.5rem;
+  border: none;
+  font-size: 1.5rem;
+  color: #9e2e2e;
+  cursor: pointer;
+  transition: all 0.25s;
+}
+
+.btn:active {
+  transform: scale(0.95);
+}
+
+@media (orientation: portrait) {
+  .body {
+    background-image: url(./resources/bgSm.svg);
+    padding: 1rem 0.5rem;
+  }
+
+  .h1 {
+    font-size: 2rem;
+  }
+
+  .count {
+    font-size: 7.5rem;
+  }
+
+  .btnCont {
+    margin-left: -0.5rem;
+    flex-direction: column;
+    width: 80%;
+    align-items: center;
+    width: 100%;
+    bottom: 1rem;
+  }
+
+  .btn {
+    margin: 0.5rem;
+    font-size: 1rem;
+    width: 100%;
+    max-width: 300px;
+    padding: 1rem;
+  }
 }
